closes #27 - Refactor tests and add tests for Exception Handlers